infra/production/k8s/ingress/argo-rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-ingress
  namespace: argo-rollouts
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: argo-rollouts-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: argo-rollouts.mishrahub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
  tls:
  - hosts:
    - argo-rollouts.mishrahub.com
    secretName: argo-rollouts-tls
