infra/production/k8s/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring # must match the service namespace
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Optional: Add basic auth or OAuth for security
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: grafana-basic-auth
  labels:
    app: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.mishrahub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana # must match your Service
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.mishrahub.com
      secretName: grafana-tls
